--- a/test.html
+++ b/test.html
@@ -1,1 +1,14 @@
+<html>
+    <head>
+        <title>
+            Test page for Daily Grind
+        </title>
+    </head>
+    <body>
+        <h1>Test page for Daily Grind</h1>
+        <script>
+            alert("Hi I'm JS!");
 
+        </script>
+    </body>
+</html>
